# CppNumericalSolvers

./: .clang-format  .clang-tidy  .drone.yml  .gitignore  .gitmodules  .travis.yml  BUILD  CITATION.cff  CMakeLists.txt  Config.cmake.in  CppNumericalSolvers.config.example  Dockerfile.test  LICENSE  MODULE.bazel  README.md  WORKSPACE  bazel.rc  compile.sh  cppoptlib.pc.in  format.sh  generator.bzl  get_dependencies.sh  lint.py  makefile
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.ci/: Dockerfile
.github/workflows/: ci.yml
3p/: build_all.sh  build_using_cmake.sh
cmake/: gnu_posix_regex.cpp  lint.cmake  posix_regex.cpp  std_regex.cpp  steady_clock.cpp
cmake/Modules/: FindEigen3.cmake  FindMatlabMex.cmake
examples/: CMakeLists.txt  rosenbrock_function.cpp
include/: BUILD  function.h
include/cns/: meta.h  problem.h  timer.h
include/cns/linesearch/: armijo.h  morethuente.h  wolfeheuristic.h
include/cns/solver/: bfgssolver.h  conjugatedgradientdescentsolver.h  gradientdescentsolver.h  isolver.h  lbfgsbsolver.h  lbfgssolver.h  newtondescentsolver.h
include/cppoptlib/: BUILD  bounded_problem.h  boundedproblem.h  constrained_function.h  function.h  function_base.h  function_expressions.h  function_penalty.h  function_problem.h  meta.h  problem.h  timer.h
include/cppoptlib/linesearch/: armijo.h  hager_zhang.h  more_thuente.h  morethuente.h  wolfeheuristic.h
include/cppoptlib/solver/: augmented_lagrangian.h  bfgs.h  bfgssolver.h  cmaesbsolver.h  cmaessolver.h  conjugated_gradient_descent.h  conjugatedgradientdescentsolver.h  gradient_descent.h  gradientdescentsolver.h  isolver.h  lbfgs.h  lbfgsb.h  lbfgsbsolver.h  lbfgssolver.h  nelder_mead.h  neldermeadsolver.h  newton_descent.h  newtondescentsolver.h  progress.h  solver.h  state.h  trust_region_newton.h
include/cppoptlib/utils/: derivatives.h
include/gtest/: CMakeLists.txt  gtest-all.cpp  gtest_main.cc
include/linesearch/: armijo.h  more_thuente.h
include/solver/: bfgs.h  gradient_descent.h  lbfgs.h  lbfgsb.h  newton_descent.h  solver.h
include/utils/: derivatives.h  format.h
matlab/: CMakeLists.txt  beale.m  cns.cxx  cppoptlib.cxx  example.m  make.m  rosenbrockstruc.m
matlab-bindings/: cppnumerical.cpp  cppsolver.cpp  cppsolver.m  example.m  gradient.m  make.m  objective.m  rosenbrock.m  rosenbrock_grad.m  rosenbrock_hessian.m
src/: BfgsSolver.cpp  BfgsSolver.h  ConjugateGradientSolver.cpp  ConjugateGradientSolver.h  GradientDescentSolver.cpp  GradientDescentSolver.h  ISolver.cpp  ISolver.h  LbfgsSolver.cpp  LbfgsSolver.h  LbfgsbSolver.cpp  LbfgsbSolver.h  Meta.cpp  Meta.h  NewtonDescentSolver.cpp  NewtonDescentSolver.h  main.cpp  samples.cpp  unittest.hpp  unittests.cpp
src/examples/: CMakeLists.txt  constrained_simple.cc  constrained_simple2.cc  debug.cc  debug.cpp  iris_data.h  linear_regression.cc  linearregression.cpp  logisticregression.cpp  neldermead-customized.cpp  neldermead.cpp  nonnegls.cpp  nonnegls2.cpp  rosenbrock.cpp  rosenbrock_float.cpp  simple.cc  simple.cpp  simple_withoptions.cpp  svm_dual_al.cc  svm_dual_lbfgsb.cc  svm_primal_al.cc  svm_primal_lbfgs.cc  trust_region_newton_rosenbrock.cc
src/linesearch/: Armijo.h  NocedalWright.h  WolfeRule.h
src/test/: CMakeLists.txt  augmented_lagrangian_test.cc  benchmark.cpp  cstep_test.cc  hager_zhang_test.cc  trust_region_newton_test.cc  verify.cc  verify.cpp
tensorflow/: CMakeLists.txt  README.md  configure.py  problem.py  solve.cpp  solve.py  tensorflow_config.txt
unittests/: CMakeLists.txt  solver_basic_tests.cpp
